--- a/package.json
+++ b/package.json
@@ -5,9 +5,24 @@
         "server": "cd server && npm run dev",
         "client": "cd client && npm run dev",
         "dev": "concurrently \"npm run server\" \"npm run client\"",
-        "install:all": "npm install && cd client && npm install && cd ../server && npm install"
+        "install:all": "npm install && cd client && npm install && cd ../server && npm install",
+        "postinstall": "prisma generate --schema=./server/prisma/schema.prisma"
     },
     "dependencies": {
-        "concurrently": "^8.2.0"
+        "concurrently": "^8.2.0",
+        "@prisma/client": "^5.22.0",
+        "bcrypt": "^6.0.0",
+        "compression": "^1.8.1",
+        "cors": "^2.8.6",
+        "dotenv": "^17.2.3",
+        "express": "^5.2.1",
+        "express-rate-limit": "^8.2.1",
+        "helmet": "^8.1.0",
+        "joi": "^18.0.2",
+        "jsonwebtoken": "^9.0.3",
+        "morgan": "^1.10.1"
+    },
+    "devDependencies": {
+        "prisma": "^5.22.0"
     }
 }
