--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,8 @@
     "version": 2,
     "rewrites": [
         {
-            "source": "/api/(.*)",
-            "destination": "/api/index.js"
-        },
-        {
-            "source": "/(.*)",
-            "destination": "/client/index.html"
+            "source": "/((?!api/.*).*)",
+            "destination": "/index.html"
         }
     ]
 }
