Fix Vercel 404: Explicitly define functions in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,10 @@
             "source": "/((?!api/.*).*)",
             "destination": "/index.html"
         }
-    ]
+    ],
+    "functions": {
+        "api/**/*.js": {
+            "maxDuration": 10
+        }
+    }
 }
