--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "client": "cd client && npm run dev",
         "dev": "concurrently \"npm run server\" \"npm run client\"",
         "install:all": "npm install && cd client && npm install && cd ../server && npm install",
-        "postinstall": "prisma generate --schema=./server/prisma/schema.prisma"
+        "postinstall": "prisma generate --schema=./server/prisma/schema.prisma",
+        "build": "cd client && npm install && npm run build"
     },
     "dependencies": {
         "concurrently": "^8.2.0",
