--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,25 @@
 {
     "version": 2,
+    "builds": [
+        {
+            "src": "api/**/*.js",
+            "use": "@vercel/node"
+        },
+        {
+            "src": "package.json",
+            "use": "@vercel/static-build",
+            "config": {
+                "distDir": "client/dist"
+            }
+        }
+    ],
     "rewrites": [
         {
-            "source": "/((?!api/.*).*)",
+            "source": "/api/(.*)",
+            "destination": "/api/index.js"
+        },
+        {
+            "source": "/(.*)",
             "destination": "/index.html"
         }
     ]
