--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,8 @@
     "helmet": "^8.1.0",
     "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.3",
-    "morgan": "^1.10.1"
+    "morgan": "^1.10.1",
+    "nodemailer": "^7.0.13"
   },
   "description": "",
   "devDependencies": {
